simplifications to interface

--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -25,6 +25,16 @@
 	Volume = {26},
 	Year = {2010}}
 
+@inbook{bda,
+	Author = {{Gelman, Andrew et al.}},
+	Chapter = {{Basics of Markov chain simulation}},
+	Date-Added = {2015-10-18 02:38:58 +0000},
+	Date-Modified = {2015-10-18 02:42:32 +0000},
+	Edition = {3rd},
+	Publisher = {{CRC Press}},
+	Title = {{Bayesian Data Analysis}},
+	Year = {2013}}
+
 @article{niemi,
 	Author = {{Niemi, Jarad and Mittman, Eric and Landau, Will and Nettleton, Dan}},
 	Date-Added = {2015-10-22 07:46:17 +0000},
