--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -196,7 +196,7 @@ The `Configs` S4 class contains the practical MCMC configuration parameters, suc
 
 However, for serious analyses, you may want to adjust the `iterations`, `burnin`, and `thin` slots to control the duration of the MCMC. `burinin` is the number of throwaway iterations at the beginning of the MCMC, `iterations` is the number of iterations for which parameter samples are actually returned to the user, and `thin` specifies the thinning interval.  The total number of MCMC iterations is `burnin + iterations * thin`, and all of the `iterations * thin` portion is used to calculate posterior means, mean squares, and posterior probabilities of interest specified in the `Scenario` object. If `thin` is > 1, not all parameter samples after burnin are returned to the user. For example, `thin` is 10, then after burnin, actual parameter samples are saved every 10th iteration.
 
-You may also want to adjust the `Configs` slots that apply constraints on model parameters. The `parameter_sets_update` controls which sets of parameters to update during the MCMC. Parameter sets not specified in `parameter_sets_update` will be held constant, so this slot can be used to run an empirical Bayes analysis, for example. The `parameter_sets_return`, `genes_return`, `libraries_return`, `genes_return_epsilon`, and `libraries_return_epsilon` slots control which Monte Carlo parameter samples to return to the user.
+You may also want to adjust the `Configs` slots that apply constraints on model parameters. The `parameter_sets_update` controls which sets of parameters to update during the MCMC. Parameter sets not specified in `parameter_sets_update` will be held constant, so this slot can be used to run an empirical Bayes analysis, for example. The `parameter_sets_return`, `genes_return`, `libraries_return` (currently moot because there are no library-specific parameters other than the epsilons), `genes_return_epsilon`, and `libraries_return_epsilon` slots control which Monte Carlo parameter samples to return to the user.
 
 ## (Optional) create a `Starts` object.
 
