--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -2,12 +2,19 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for William Landau at 2015-10-22 13:10:48 -0500 
+%% Created for William Landau at 2016-01-10 00:12:48 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{dic,
+	Author = {Spiegelhalter, D J and Best, N G and Carlin, B P},
+	Date-Added = {2016-01-10 06:11:38 +0000},
+	Date-Modified = {2016-01-10 06:12:47 +0000},
+	Title = {Bayesian deviance, the effective number of parameters, and the comparison of arbitrarily complex models},
+	Year = {1998}}
 
 @manual{baySeq,
 	Author = {Thomas J. Hardcastle},
@@ -24,16 +31,6 @@
 	Title = {{edgeR: a Bioconductor package for differential expression analysis of digital gene expression data.}},
 	Volume = {26},
 	Year = {2010}}
-
-@inbook{bda,
-	Author = {{Gelman, Andrew et al.}},
-	Chapter = {{Basics of Markov chain simulation}},
-	Date-Added = {2015-10-18 02:38:58 +0000},
-	Date-Modified = {2015-10-18 02:42:32 +0000},
-	Edition = {3rd},
-	Publisher = {{CRC Press}},
-	Title = {{Bayesian Data Analysis}},
-	Year = {2013}}
 
 @article{niemi,
 	Author = {{Niemi, Jarad and Mittman, Eric and Landau, Will and Nettleton, Dan}},
@@ -54,9 +51,8 @@
 	Volume = {19},
 	Year = {2014}}
 
-@inbook{bda,
+@book{bda,
 	Author = {{Gelman, Andrew et al.}},
-	Chapter = {{Basics of Markov chain simulation}},
 	Date-Added = {2015-10-18 02:38:58 +0000},
 	Date-Modified = {2015-10-18 02:42:32 +0000},
 	Edition = {3rd},
